# modern-c-web-library

./: .dockerignore  .gitignore  ACHIEVEMENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER-QUICKREF.md  DOCKER.md  DOCKER_PACKAGE.md  Dockerfile  Dockerfile.dev  Dockerfile.release  LICENSE  PUBLISH_GUIDE.md  README.md  SECURITY.md  TODO.md  complete HTTP Parse.md  docker-compose.yml  docker-run.sh  docker-verify.sh  publish-package.sh  test_basic_ws.py  test_handshake.py  test_ping.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_update.yml  feature_request.yml
.github/agents/: my-agent.agent.md
.github/workflows/: docker-publish.yml
_codeql_build_dir/examples/: simple_server
_codeql_build_dir/tests/: test_weblib
docs/: DEBUGGING.md  WEBSOCKET.md
examples/: CMakeLists.txt  async_server.c  db_pool_example.c  generate_cert.sh  simple_server.c  ssl_server.c  static_server.c  template_demo.c  websocket_echo_server.c  websocket_server.c  websocket_test.html
examples/public/: index.html  script.js  styles.css
include/: db_pool.h  ssl_context.h  weblib.h
src/: body_parser.c  cookie.c  db_pool.c  event_loop.c  http_server.c  json.c  rate_limiter.c  router.c  session.c  ssl_context.c  static_files.c  template.c  websocket.c
tests/: CMakeLists.txt  test_db_pool.c  test_weblib.c
